# pg-g4public-orm

./: .buildinfo  .env.example  .gitignore  CHANGELOG.md  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quick-start.html  search.html  searchindex.js
.doctrees/: index.doctree  installation.doctree  quick-start.doctree
.doctrees/api/: index.doctree  models.doctree
.github/scripts/: analyze_commits.py  check_coverage_threshold.py  generate_coverage_summary.py  update_version_references.py
.github/workflows/: ci.yml  coverage.yml  development.yml  docs.yml  pages.yml  release.yml
_sources/: installation.md.txt
_sources/api/: models.rst.txt
api/: index.html  models.html
docs/: Makefile  conf.py  index.md  installation.md  quick-start.md
docs/api/: index.rst
schema/: g4public.sql
src/pg_g4public_orm/: __init__.py
src/pg_g4public_orm/core/: __init__.py  base.py  session.py  settings.py
src/pg_g4public_orm/models/: __init__.py
src/pg_g4public_orm/models/association/: __init__.py  family_has_external_resource.py  family_has_specialist.py  gene_has_family.py
src/pg_g4public_orm/models/core/: __init__.py  cell.py  comment.py  ensembl2hgnc.py  family_alias.py  family_new.py  filestore.py  gencc.py  hcop_orthologs.py  hierarchy.py  hierarchy_closure.py  import_model.py  locus_stats.py  locus_stats_chr.py  mane.py  pub_hgnc.py
src/pg_g4public_orm/models/reference/: __init__.py  external_resource.py  specialist.py
src/pg_g4public_orm/repositories/: __init__.py  base.py
tests/: conftest.py  test_packaging.py  test_public_api.py
tests/integration/: __init__.py  conftest.py  test_repository_crud.py  test_schema_drift.py  test_schema_loads.py
tests/unit/: test_ci_validation.py  test_docs_build.py  test_release_scripts.py  test_session.py  test_settings.py  test_workflow_triggers.py
tests/unit/models/association/: test_association_models.py
tests/unit/models/core/: test_cell_and_stats.py  test_family_group.py  test_filestore_import.py  test_gene_xref_models.py  test_hcop_orthologs.py  test_pub_hgnc.py
tests/unit/models/reference/: test_reference_models.py
tests/unit/repositories/: __init__.py  test_base_repository.py
