[project]
name = "pg-g4public-orm"
version = "0.0.1"
description = "SQLAlchemy 2.0 ORM for the PostgreSQL g4public database (HGNC public gene/family data)"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "HGNC Development Team", email = "hgnc@genenames.org"}
]
keywords = ["orm", "sqlalchemy", "pydantic", "database", "postgresql", "hgnc", "g4public"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "db-common>=0.2.0",
]

[project.optional-dependencies]
# Test-runtime tools only — used by the CI matrix legs that just run tests, so
# they stay fast and don't pull the quality/docs toolchain.
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "testcontainers>=4.0",
    "actionlint-py>=1.7",
    "pyyaml>=6.0",
]
# PostgreSQL driver for the integration leg (matches the runtime dep so the
# `postgresql+psycopg` driver is usable in CI without re-declaring it).
postgres = [
    "psycopg[binary]>=3.1",
]
# Quality + docs toolchain. Pulls the `test`/`postgres` extras transitively via
# the self-referential extras so `uv sync --extra dev` installs a working full
# dev environment.
dev = [
    "pg-g4public-orm[test]",
    "pg-g4public-orm[postgres]",
    "mypy>=1.0",
    "ruff>=0.8",
    "black>=24.0",
    "isort>=5.0",
    "bandit>=1.7",
]

[project.urls]
Homepage = "https://github.com/HGNC/pg-g4public-orm"
Documentation = "https://github.com/HGNC/pg-g4public-orm/tree/main/docs"
Repository = "https://github.com/HGNC/pg-g4public-orm.git"
"Bug Tracker" = "https://github.com/HGNC/pg-g4public-orm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pg_g4public_orm"]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.ruff.lint.isort]
known-third-party = ["sqlalchemy", "pydantic"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (require PostgreSQL via testcontainers)",
]

[tool.coverage.run]
source = ["src"]
parallel = true
concurrency = ["thread"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "anybadge>=1.1",
    "myst-parser>=4.0",
    "sphinx>=8.0",
    "testcontainers>=4.0",
]

[tool.uv.sources]
db-common = { git = "https://github.com/HGNC/db-common.git", tag = "v0.2.0" }
